stylesheet.css
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption, hr {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    vertical-align: baseline;
    background: transparent;
	text-decoration: none;
	color: black;
}

html{
	font-family: "courier new";
	height: 100%;
}

body{
	background-color: rgb(255, 255, 255);
	height: 100%;
	word-wrap: break-word;
}

#titleBar{
	background-color: rgb(160, 210, 255);
	border-bottom: 0.1em solid rgb(80, 80, 80);
	float: top;
}

#title{
	text-align: center;
	text-decoration: none;
	color: black;
}

#formcontainer{
	text-align: center;
}

#formulabox{
	text-align: left;
	border: 0.1em solid rgb(80, 80, 80);
	display: inline-block;
	width: max-content;
	background-color: rgb(190, 190, 190);
}

#content{
	padding: 0% 2% 0% 2%;
	width: 75%;
	float: right;
}

#navbar{
	height: 210%;
	width: 20%;
	float: left;
	border-right: 0.1em solid rgb(80, 80, 80);
}

h1{
	padding: 0.4em 0 0.4em 0;
	font-size: 2em;
}

h2{
	text-align: center;
}

#niceln:link{
	color: blue;
}

#niceln:visited{
	color: blue;
}

#niceln:hover {
	text-decoration: underline;
}

ul{
	background-color: rgb(190, 190, 190);
	position: sticky;
	top: 0;
	overflow: auto;
}

li {
	text-align: center;
	border-bottom: 0.1em solid rgb(80, 80, 80);
	padding: 2.5% 0 2.5% 0;
	font-size: 1.1em;
	font-weight: bold;
}

li:hover{
	background-color: rgb(160, 160, 160);
}

.active {
	background-color: rgb(160, 210, 255);
}

.active:hover{
	background-color: rgb(150, 180, 225);
}

